--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -89,6 +89,7 @@ $br-999: 999px;
 // $break point
 $breakpoint :(
     'xl': 1700px,
+    'lg2': 1450px,
     'lg': 1160px,
     'md': 900px,
     'md-1': 842px,
