--- a/css/main.css
+++ b/css/main.css
@@ -156,9 +156,17 @@ body {
 }
 
 .see--more--link {
-  display: block;
   color: #4a73e8;
   text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .see--more--link i {
@@ -1176,7 +1184,7 @@ body {
 
 .project .project__content {
   position: relative;
-  padding: 96px 0;
+  padding: 24px 24px;
 }
 
 .project .project__content .project__title {
@@ -1186,25 +1194,25 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-bottom: 24px;
 }
 
 .project .project__content .project__title h2 {
   color: #404145;
   font-size: 32px;
   font-weight: 700;
-  padding-bottom: 24px;
 }
 
 .project .project__content .project__img {
   height: 237px;
   width: 100%;
   border-radius: 4px 4px 0 0;
-  -webkit-transition: opacity .3s;
-  transition: opacity .3s;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
 }
 
 .project .project__content .project__img:hover {
-  opacity: .85;
+  opacity: 0.85;
 }
 
 .project .project__content .project__info {
@@ -1250,9 +1258,9 @@ body {
   }
 }
 
-@media only screen and (min-width: 900px) {
-  .project .project__content h2 {
-    padding-right: 180px;
+@media (max-width: 599px) {
+  .project .project__content .project__title h2 {
+    font-size: 24px;
   }
 }
 
@@ -1267,13 +1275,13 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-bottom: 24px;
 }
 
 .guides .guides__title h2 {
   color: #404145;
   font-size: 32px;
   font-weight: 700;
-  padding-bottom: 24px;
 }
 
 .guides .guides__content .guides__item {
@@ -1314,6 +1322,12 @@ body {
 @media only screen and (min-width: 600px) {
   .guides {
     margin-bottom: 96px;
+  }
+}
+
+@media (max-width: 599px) {
+  .guides .guides__title h2 {
+    font-size: 24px;
   }
 }
 
