--- a/sass/Layouts/_guides.scss
+++ b/sass/Layouts/_guides.scss
@@ -3,9 +3,9 @@
     .guides__title {
         display: flex;
         justify-content: space-between;
+        padding-bottom: $pd-1 + 4;
         h2 {
             @include textStyle($color-black-2, $fs-6, $fw-3);
-            padding-bottom: $pd-1 + 4;
         }
     }
     .guides__content {
@@ -32,7 +32,6 @@
             }
             a {
                 text-decoration: none;
-                
             }
         }
     }
@@ -40,5 +39,14 @@
 @include responsive("sm") {
     .guides {
         margin-bottom: $mg-7;
+    }
+}
+@media (max-width: 599px) {
+    .guides {
+        .guides__title {
+            h2 {
+                font-size: $fs-4;
+            }
+        }
     }
 }
